[project]
name = "wisteria-qwen35-4gpu"
version = "0.1.0"
description = "Qwen3.5-35B-A3B on Wisteria/Aquarius (4GPU, vLLM, no quantization)"
requires-python = ">=3.11"
dependencies = [
    "vllm",
    "transformers",
    "openai",
    "huggingface_hub",
    "accelerate",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
